@@ -1,0 +1,77 @@
+#!/bin/sh
+
+#
+# Program: ECO.config
+#
+# Purpose:
+#
+#   Configuration file for ECO load
+#
+# Usage:
+#
+#   Execute this file from a script or command line to
+#   set environment variables for ECO load
+#
+# History:
+#
+#	06/10/2016	lec
+#	- TR12349/12340/12345/part of GO/Noctua
+#
+
+cd `dirname $0` 
+
+RUNTIME_DIR="${DATALOADSOUTPUT}/mgi/vocload/runTimeECO"
+ARCHIVE_DIR="${DATALOADSOUTPUT}/mgi/vocload/archiveECO"
+DATA_DIR="/data/downloads/purl.obolibrary.org/obo/eco"
+export RUNTIME_DIR
+export ARCHIVE_DIR
+export DATA_DIR
+
+TERM_FILE="${RUNTIME_DIR}/Termfile"
+OBO_FILE="${DATA_DIR}/eco.obo"
+OBO_FILE_VERSION="1.2"
+export TERM_FILE
+export OBO_FILE
+export OBO_FILE_VERSION
+
+# This variable will let the loadTerm module know that it should expect to
+# find a synonym type column in the Termfile.
+#
+USE_SYNONYM_TYPE=1
+export USE_SYNONYM_TYPE
+
+LOAD_PROGRAM="${LOAD_PROGRAM}"
+RCD_FILE="ECO.rcd"
+export LOAD_PROGRAM
+export RCD_FILE
+
+case `uname -n` in
+bhmgiapp01) MAINTAINER="mgiadmin";;
+*) MAINTAINER="$USER";;
+esac
+export MAINTAINER
+
+# vocabulary attributes:
+
+VOCAB_NAME="Evidence Code Ontology"		 # name of vocabulary (VOC_Vocab.name)
+VOCAB_COMMENT_KEY=1000   # name of note types for comments
+ACC_PREFIX="ECO"	 # acc ID prefix
+JNUM="J:73041"		 # reference for this vocabulary
+IS_SIMPLE=1		 # structured vocabulary; should be a .rcd file
+IS_PRIVATE=0		 # acc IDs are public
+LOGICALDB_KEY=182
+ANNOT_TYPE_KEY=0      	 # VOC_AnnotType._AnnotType_key;don't report annotations
+MGITYPE=13		 # ACC_MGIType._MGIType_key
+DAG_ROOT_ID="ECO:0000000" # ECO ID of root node which is referfed to in multiple files
+
+export VOCAB_NAME
+export VOCAB_COMMENT_KEY
+export ACC_PREFIX
+export JNUM
+export IS_SIMPLE
+export IS_PRIVATE
+export LOGICALDB_KEY
+export ANNOT_TYPE_KEY
+export MGITYPE
+export DAG_ROOT_ID
+
