@@ -1,0 +1,31 @@
+<HTML><HEADER>
+<body bgcolor="#ffffff" link="#006666" vlink="#666666">
+<TITLE>Evidence Code Ontology Vocabulary</TITLE>
+</HEADER>
+<BODY>
+
+<H2>Evidence Code Ontology Vocabulary</H2>
+
+<H3>Inputs</H3>
+<UL>
+<LI><A HREF="/data/loads/mgi/vocload/runTimeECO/eco.obo">eco.obo</A>
+</UL>
+
+<H3>Reports</H3>
+<UL>
+<LI><A HREF="/data/loads/mgi/vocload/runTimeECO/discrepancy.html">discrepancy.html</A> - Curator Report
+</UL>
+
+<H3>Outputs</H3>
+<UL>
+<LI><A HREF="/data/loads/mgi/vocload/runTimeECO/validationLog.txt">validationLog.txt</A> - OBO input file validation errors
+<LI><A HREF="/data/loads/mgi/vocload/runTimeECO/fullLog.txt">fullLog.txt</A> - File generated by vocload containing a complete record of the job, including all SQL executed.
+<LI><A HREF="/data/loads/mgi/vocload/runTimeECO/Termfile">Termfile</A> - File generated by vocload containing all the terms being processed.
+<LI><A HREF="/data/loads/mgi/vocload/runTimeECO/"><B>All available run-time files</B></A> - All files located in the run-time directory.
+</UL>
+
+<H3>Archives</H3>
+<UL>
+<LI><A HREF="/data/loads/mgi/vocload/archiveECO/"><B>Archive</B></A> - Data files from previous loads.
+</UL>
+
