@@ -1,3 +1,9 @@
+TAG: vocload-6-0-4-8
+DATE: 06/10/2016
+STAFF: lec 
+CHANGES:
+1) TR12345/ECO (Evidence Code Ontology)
+
 TAG: vocload-6-0-4-7
 TAG: vocload-6-0-4-6
 DATE: 06/02/2016
